--- a/package.json
+++ b/package.json
@@ -23,9 +23,15 @@
     "email": "paul.willems@gmail.com"
   },
   "dependencies": {
+    "@inventivetalent/loading-cache": "^0.7.1",
+    "@inventivetalent/time": "^1.0.3",
+    "async": "^3.2.6",
+    "axios": "^1.7.8",
     "handlebars": "^4.7.8",
-    "moment": "^2.30.1",
-    "request": "^2.88.2"
+    "helpers-for-handlebars": "^0.10.11",
+    "node-worker-threads-pool": "^1.5.1",
+    "request": "^2.88.2",
+    "synchronized-promise": "^0.3.1"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
