--- a/package.json
+++ b/package.json
@@ -25,19 +25,15 @@
   "dependencies": {
     "@inventivetalent/loading-cache": "^0.7.1",
     "@inventivetalent/time": "^1.0.3",
-    "async": "^3.2.6",
     "axios": "^1.7.8",
     "handlebars": "^4.7.8",
-    "helpers-for-handlebars": "^0.10.11",
-    "node-worker-threads-pool": "^1.5.1",
-    "request": "^2.88.2",
-    "synchronized-promise": "^0.3.1"
+    "helpers-for-handlebars": "^0.10.11"
   },
   "devDependencies": {
-    "eslint": "^8.57.1",
+    "eslint": "^9.16.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.6.0"
+    "eslint-plugin-n": "^17.14.0",
+    "eslint-plugin-promise": "^7.2.1"
   }
 }
