--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@inventivetalent/time": "^1.0.3",
     "axios": "^1.7.8",
     "handlebars": "^4.7.8",
-    "helpers-for-handlebars": "^0.10.11"
+    "helpers-for-handlebars": "^0.10.11",
+    "node-schedule": "^2.1.1"
   },
   "devDependencies": {
     "eslint": "^9.16.0",
