--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@inventivetalent/time": "^1.0.3",
     "axios": "^1.7.8",
     "handlebars": "^4.7.8",
+    "handlebars-dateformat": "^1.1.3",
     "helpers-for-handlebars": "^0.10.11",
-    "node-schedule": "^2.1.1"
+    "node-schedule": "^2.1.1",
+    "xml-js": "^1.6.11",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "eslint": "^9.16.0",
